Fixed spacing for tags, gallery preview

--- a/styles.css
+++ b/styles.css
@@ -607,6 +607,7 @@ select {
 .orderTitleCell {
     font-size: 20px;
     text-align: center;
+    padding-top: 20px;
 }
 
 .orderTableButtonCell {
@@ -655,6 +656,7 @@ select {
     opacity: 1;
     background: none;
     transition: 0.5s ease;
+    margin-right: 5px;
 }
 
 .gameDetailsGalleryButton:hover {
@@ -692,6 +694,7 @@ select {
     padding-right: 20px;
     border-radius: 50px;
     box-shadow: 0px 0px 5px 0px black;
+    margin-right: 5px;
 }
 
 #gameDetailsMainImage {
